fixed overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,9 @@
 }
 
 body {
+  height: 100%;
   margin: 0;
-  overflow: 'hidden';
+  overflow: hidden;
 }
 
 h1,
